tests/fails/error_for_missing_partition_key.rs
use dynamodb_helper::DynamoDb;

#[derive(DynamoDb)]
pub struct Example {
    first: String,
    second: u32,
}

fn main() {}
